# image-classifier

./: .bazelrc  LICENSE  README.md  WORKSPACE  bazel_build_rpi.sh  bazel_run_benchmark.sh  bazel_run_desktop_image.sh  build.sh  run.sh  run_apps_desktop_camera.sh  run_apps_desktop_image.sh  run_image_classifier_benchmark.sh
cc/: image_classifier.cc
examples/desktop/: BUILD
image_classifier/apps/coral/: BUILD
image_classifier/apps/desktop/: ;  BUILD  benchmark.cc  main.cc
image_classifier/apps/raspberry_pi/: BUILD
image_classifier/cc/: BUILD  classifier_float_efficient_net.cc  classifier_float_efficient_net.h  classifier_float_mobile_net.cc  classifier_float_mobile_net.h  classifier_float_mobilenet.cc  classifier_float_mobilenet.h  classifier_quantized_efficient_net.cc  classifier_quantized_efficient_net.h  classifier_quantized_efficient_net_edge_tpu.cc  classifier_quantized_efficient_net_edge_tpu.h  classifier_quantized_mobile_net.cc  classifier_quantized_mobile_net.h  classifier_quantized_mobile_net_edge_tpu.cc  classifier_quantized_mobile_net_edge_tpu.h  image_classifier.cc  image_classifier.h  image_classifiers.cc  image_classifiers.h  image_classify_service.cc  image_classify_service.h  utils.h
image_classifier/examples/desktop/: BUILD  main.cc
legacy/: CMakeLists.txt  build.sh  run_apps_desktop_camera.sh  run_apps_desktop_image.sh
